--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </nav>
       
 
-      <!-- Dark mode toggle button -->
+      <!-- darkmode -->
     <button id="theme-toggle" class="theme-toggle" type="button">
       🌙
     </button>
